EyeShield - Push 3 -  Design Improvements - Filter killing fixed - Landscape supported

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,8 +71,8 @@ There are 4 button in main circular menu. The top one is to start with your time
   Please contact us if you have any feedback."
     </string>
     <string name="contact_us">Contact Us</string>
-    <string name="copy_right_copy">Copyright &#169; 2017 mmalvandi\nAll Rights Reserved.</string>
-    <string name="developer_mahdi_malvandi">Developer: mmalvandi</string>
+    <string name="copy_right_copy">Copyright &#169; 2017 skillson\nAll Rights Reserved.</string>
+    <string name="developer_mahdi_malvandi">Developer: skillson</string>
     <string name="eye_shield_started">Eye shield mode activated!</string>
     <string name="your_full_name">Your Full Name…</string>
     <string name="mail_body">Mail Body…</string>
